# autonomous-rover

./: .gitignore  CMakeLists.txt  README.md  package.xml
benchmarks/: README.md
description/: ros2_control.xacro
docs/: dev-setup-macos.md  dev-setup-windows-linux.md
launch/: ball_tracker.launch.py  joystick.launch.py  launch_robot.launch.py  launch_sim.launch.py  localization_launch.py  navigation_launch.py  online_async_launch.py  rsp.launch.py
rosbags/: estimated_trajectory.tum  odom_to_tum.py
rover/: CMakeLists.txt  package.xml
rover_2024_description/: CMakeLists.txt  package.xml
rover_basic_description/: CMakeLists.txt  package.xml
rover_bringup/: CMakeLists.txt  package.xml
rover_description/: CMakeLists.txt  package.xml
rover_gazebo/: CMakeLists.txt  package.xml
rover_gazebo/include/rover_gazebo/: motors_command_parser_node.hpp
rover_gazebo/launch/: apollo_17.launch.py  comp_track.launch.py  gazebo.launch.py  moon.launch.py  moon_rocks.launch.py  obstacles.launch.py  rviz.launch.py  sim.launch.py
rover_gazebo/launch/include/: cmd_vel.launch.py  spawn.launch.py
rover_gazebo/models/apollo_17/: model.config  model.sdf
rover_gazebo/models/comp_track/: model.config  model.sdf
rover_gazebo/models/moon/: model.config
rover_gazebo/rviz/: default.rviz
rover_gazebo/src/: motors_command_parser_node.cpp
rover_gazebo/worlds/: apollo_17.world  comp_track.world  moon_rocks.world
rover_localization/: package.xml
rover_motor_controller/: package.xml  setup.py
rover_motor_controller_cpp/: package.xml
rover_msgs/: package.xml
(+178 files in other folders)
