<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rover_gazebo</name>
  <version>0.0.0</version>
  <description>Rover Gazebo package</description>
  <maintainer email="my_email@email.com">maintainer</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>gazebo</depend>
  <depend>gazebo_ros</depend>
  <depend>controller_manager</depend>
  <depend>rviz2</depend>

  <depend>rover_description</depend>
  <depend>rover_msgs</depend>
  <depend>rover_motor_controller_cpp</depend>

  <depend>std_msgs</depend>
  <depend>trajectory_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
  </export>
</package>
